--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -62,15 +62,36 @@ body{
         font-size: 50px;
         font-family: "Jura";
         position: absolute;
-        left: 40%;
+        left: 39%;
     }
     #sub_title{
         font-size: 110px;
         font-family: "Jura";
         position: absolute;
         left: 10%;
-        top: 15%;
+        top: 10%;
         text-align: center;
         font-weight: lighter;
+    }
+    #describe{
+        font-size: 70px;
+        position: absolute;
+        top: 40%;
+        left: 17.5%;
+        font-family: "Jura";
+    }
+    #clickhere{
+        font-size: 70px;
+        position: absolute;
+        top: 60%;
+        left: 27%;
+        font-family: "Jura";
+        background-color: #D2BE98;
+        padding: 1%;
+        border-radius: 50px;
+    }
+    #wcag{
+        position: absolute;
+        top: 120%;
     }
 }
