--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1,8 +1,8 @@
 .jura-uniquifier {
-  font-family: "Jura", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
+    font-family: "Jura", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
 }
 body{
     background-color: white;
@@ -57,7 +57,141 @@ body{
         font-weight: lighter;
     }
 }
-@media only screen and (min-width: 1301px){
+@media only screen and (min-width: 1301px) and (max-width: 1900px){
+    #webtitle{
+        font-size: 50px;
+        font-family: "Jura";
+        position: absolute;
+        left: 39%;
+    }
+    #sub_title{
+        font-size: 100px;
+        font-family: "Jura";
+        position: absolute;
+        left: 5%;
+        top: 10%;
+        text-align: center;
+        font-weight: lighter;
+    }
+    #describe{
+        font-size: 55px;
+        position: absolute;
+        top: 49%;
+        left: 19%;
+        font-family: "Jura";
+    }
+    #clickhere{
+        font-size: 50px;
+        position: absolute;
+        top: 70%;
+        left: 30%;
+        font-family: "Jura";
+        background-color: #D2BE98;
+        padding: 1%;
+        border-radius: 50px;
+        cursor: pointer;
+    }
+    #clickhere:hover{
+        background-color: #ac9b7c;
+    }
+    #wcag{
+        position: absolute;
+        top: 120%;
+        font-family: "Jura";
+        font-size: 50px;
+        text-align: center;
+        left: 5%;
+    }
+    #view{
+        position: absolute;
+        top: 126%;
+        left: 78%;
+        font-size: 35px;
+        font-family: "Jura";
+        text-decoration: underline;
+    }
+    #view:hover{
+        color: #4b6458;
+        cursor: pointer;
+    }
+    #wcagrec{
+        background-color: #98D2B6;
+        width: 95%;
+        height: 23%;
+        position: absolute;
+        top: 123%;
+        left: 2%;
+        border-radius: 40px;
+    }
+    #semanticrec{
+        background-color: #D29898;
+        width: 95%;
+        height: 23%;
+        position: absolute;
+        top: 155%;
+        left: 2%;
+        border-radius: 40px;
+    }
+    #semantic{
+        position: absolute;
+        top: 155%;
+        font-size: 55px;
+        font-family: "Jura";
+        left: 65%;
+    }
+    #viewsemantic{
+        position: absolute;
+        top: 158%;
+        left: 8%;
+        font-size: 35px;
+        font-family: "Jura";
+        text-decoration: underline;
+    }
+    #viewsemantic:hover{
+        cursor: pointer;
+        color: #785656;
+    }
+    #accessrec{
+        background-color: #98BDD2;
+        width: 95%;
+        height: 23%;
+        position: absolute;
+        top: 187%;
+        left: 2%;
+        border-radius: 40px;
+    }
+    #access{
+        font-size: 55px;
+        font-family: "Jura";
+        position: absolute;
+        top: 186%;
+        left: 5%;
+    }
+    #viewaccess{
+        font-size: 35px;
+        font-family: "Jura";
+        position: absolute;
+        top: 190%;
+        left: 78%;
+        text-decoration: underline;
+    }
+
+    #bottom{
+        position: absolute;
+        top: 215%;
+        font-family: "Jura";
+        font-size: 20px;
+        left: 45%;
+    }
+    #bottomrec{
+        background-color: #D2BE98;
+        width: 99.45%;
+        height: 5%;
+        position: absolute;
+        top: 214%
+    }
+}
+@media only screen and (min-width: 1901px){
     #webtitle{
         font-size: 50px;
         font-family: "Jura";
@@ -89,9 +223,38 @@ body{
         background-color: #D2BE98;
         padding: 1%;
         border-radius: 50px;
+        cursor: pointer;
+    }
+    #clickhere:hover{
+        background-color: #ac9b7c;
     }
     #wcag{
         position: absolute;
+        top: 116.5%;
+        font-family: "Jura";
+        font-size: 70px;
+        text-align: center;
+        left: 5%;
+    }
+    #view{
+        position: absolute;
+        top: 121%;
+        left: 78%;
+        font-size: 55px;
+        font-family: "Jura";
+        text-decoration: underline;
+    }
+    #view:hover{
+        color: #4b6458;
+        cursor: pointer;
+    }
+    #wcagrec{
+        background-color: #98D2B6;
+        width: 95%;
+        height: 17%;
+        position: absolute;
         top: 120%;
+        left: 2%;
+        border-radius: 40px;
     }
 }
