--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -90,7 +90,7 @@ body{
         position: absolute;
         height: 100%;
         width: 20%;
-        left: 75%;
+        left: 102%;
         cursor: pointer;
     }
     .search-container{
@@ -237,20 +237,13 @@ body{
     a{
         color: black;
     }
-    #access-title{
+    #wcag-title{
         font-family: "Jura";
         font-size: 55px;
         position: absolute;
         top: 20%;
         left: 22%;
     }
-    /*#contents{
-        font-size: 40px;
-        font-family: "Jura";
-        color: #000000;
-        padding-top: 145px;
-        padding-bottom: 20px;
-    }*/
     .sidenav {
         height: 100%; /* 100% Full-height */
         width: 250px; /* 0 width - change this with JavaScript */
@@ -294,13 +287,13 @@ body{
         font-family: "Jura";
         font-size: 30px;
         position: absolute;
-        top: 60%;
+        top: 62%;
     }
     #perceive-ex{
         font-family: "Jura";
         font-size: 25px;
         position: absolute;
-        top: 75%;
+        top: 77%;
         left: 25%;
         padding-right: 4%;
     }
@@ -309,33 +302,75 @@ body{
     }
 }
 @media only screen and (min-width: 1901px){
+    .search-container-home {
+        border: none;
+        position: absolute;
+        left: 1%;
+        top: 2%;
+    }
+    .search-home{
+        font-size: 30px;
+        font-family: "Jura";
+    }
+    .search{
+        font-size: 20px;
+        font-family: "Jura";
+        width: 70%;
+    }
+    img{
+        width: 35%;
+        height: 60%;
+        position: absolute;
+        left: 30%;
+        top: 20%;
+    }
+    .button{
+        position: absolute;
+        height: 100%;
+        width: 20%;
+        left: 75%;
+        cursor: pointer;
+    }
+    .button-home{
+        position: absolute;
+        height: 100%;
+        width: 20%;
+        left: 102%;
+        cursor: pointer;
+    }
+    .search-container{
+        border: none;
+        position: absolute;
+        left: 5%;
+        font-size: 17px;
+    }
     #webtitle{
-        font-size: 50px;
+        font-size: 65px;
         font-family: "Jura";
         position: absolute;
-        left: 39%;
+        left: 40%;
     }
     #sub_title{
-        font-size: 110px;
+        font-size: 130px;
         font-family: "Jura";
         position: absolute;
-        left: 10%;
+        left: 4%;
         top: 10%;
         text-align: center;
         font-weight: lighter;
     }
     #describe{
-        font-size: 70px;
+        font-size: 75px;
         position: absolute;
         top: 40%;
         left: 17.5%;
         font-family: "Jura";
     }
     #clickhere{
-        font-size: 70px;
+        font-size: 90px;
         position: absolute;
         top: 60%;
-        left: 27%;
+        left: 23%;
         font-family: "Jura";
         background-color: #D2BE98;
         padding: 1%;
@@ -347,7 +382,7 @@ body{
     }
     #wcag{
         position: absolute;
-        top: 116.5%;
+        top: 123.5%;
         font-family: "Jura";
         font-size: 70px;
         text-align: center;
@@ -355,8 +390,8 @@ body{
     }
     #view{
         position: absolute;
-        top: 121%;
-        left: 78%;
+        top: 128.5%;
+        left: 75%;
         font-size: 55px;
         font-family: "Jura";
         text-decoration: underline;
@@ -368,10 +403,147 @@ body{
     #wcagrec{
         background-color: #98D2B6;
         width: 95%;
-        height: 17%;
+        height: 23%;
         position: absolute;
-        top: 120%;
+        top: 125%;
         left: 2%;
         border-radius: 40px;
+    }
+    #semanticrec{
+        background-color: #D29898;
+        width: 95%;
+        height: 23%;
+        position: absolute;
+        top: 155%;
+        left: 2%;
+        border-radius: 40px;
+    }
+    #semantic{
+        position: absolute;
+        top: 155.5%;
+        font-size: 80px;
+        font-family: "Jura";
+        left: 61%;
+    }
+    #viewsemantic{
+        position: absolute;
+        top: 158.5%;
+        left: 8%;
+        font-size: 55px;
+        font-family: "Jura";
+        text-decoration: underline;
+    }
+    #viewsemantic:hover{
+        cursor: pointer;
+        color: #785656;
+    }
+    #accessrec{
+        background-color: #98BDD2;
+        width: 95%;
+        height: 23%;
+        position: absolute;
+        top: 187%;
+        left: 2%;
+        border-radius: 40px;
+    }
+    #access{
+        font-size: 80px;
+        font-family: "Jura";
+        position: absolute;
+        top: 187.5%;
+        left: 5%;
+    }
+    #viewaccess{
+        font-size: 55px;
+        font-family: "Jura";
+        position: absolute;
+        top: 190.5%;
+        left: 75%;
+        text-decoration: underline;
+    }
+
+    #bottom{
+        position: absolute;
+        top: 214.7%;
+        font-family: "Jura";
+        font-size: 40px;
+        left: 40%;
+    }
+    #bottomrec{
+        background-color: #D2BE98;
+        width: 100%;
+        height: 5.5%;
+        position: absolute;
+        top: 214%;
+        left: 0%;
+    }
+    a{
+        color: black;
+    }
+    #wcag-title{
+        font-family: "Jura";
+        font-size: 70px;
+        position: absolute;
+        top: 15%;
+        left: 22%;
+    }
+
+    .sidenav {
+        height: 100%; /* 100% Full-height */
+        width: 250px; /* 0 width - change this with JavaScript */
+        position: fixed; /* Stay in place */
+        z-index: 1; /* Stay on top */
+        top: 0; /* Stay at the top */
+        left: 0;
+        background-color: #D2BE98; /* Black*/
+        overflow-x: hidden; /* Disable horizontal scroll */
+        padding-top: 60px; /* Place content 60px from the top */
+        transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+    }
+    .sidenav a {
+        padding: 80px 8px 8px 32px;
+        margin-top: 50%;
+        text-decoration: none;
+        font-size: 25px;
+        font-family: "Jura";
+        color: #ffffff;
+        display: block;
+    }
+    .sidenav a:hover {
+        color: #f1f1f1;
+    }
+    #active {
+        color: #ffffff;
+        text-decoration: underline;
+        font-size: 30px;
+    }
+    #main {
+        padding: 20px;
+    }
+    #pour{
+        padding: 300px;
+        font-family: "Jura";
+        font-size: 50px;
+        position: absolute;
+        left: 3%;
+    }
+    #perceive{
+        padding-left: 300px;
+        font-family: "Jura";
+        font-size: 40px;
+        position: absolute;
+        top: 45%;
+        left: 3%;
+    }
+    #perceive-ex{
+        font-family: "Jura";
+        font-size: 35px;
+        position: absolute;
+        top: 57%;
+        left: 22%;
+        padding-right: 6%;
+    }
+    mark{
+        background-color: #e3d5ba;
     }
 }
