--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -7,36 +7,414 @@ body{
     background-color: white;
 }
 
-@media only screen and (min-width: 200px) and (max-width: 640px){
+@media only screen and (min-width: 200px) and (max-width: 400px){
+    img{
+        width: 20px;
+        height: 20px;
+        position: absolute;
+        left: 17%;
+        top: 12%;
+    }
+    .button-home{
+        position: absolute;
+        height: 30px;
+        width: 30px;
+        left: 5%;
+        cursor: pointer;
+    }
+    .search-home{
+        display: none;
+    }
+    a{
+        color: black;
+        text-decoration: none;
+    }
     #webtitle{
+        font-size: 20px;
+        font-family: "Jura";
+        position: absolute;
+        left: 35%;
+    }
+    #sub_title{
         font-size: 30px;
         font-family: "Jura";
         position: absolute;
-        left: 27%;
-    }
-    #sub_title{
-        font-size: 50px;
-        font-family: "Jura";
-        position: absolute;
         top: 15%;
+        left: 1%;
         text-align: center;
         font-weight: lighter;
     }
+    #describe{
+        font-size: 18px;
+        position: absolute;
+        top: 37%;
+        left: 5%;
+        text-align: center;
+        font-family: "Jura";
+    }
+    #clickhere{
+        font-size: 25px;
+        position: absolute;
+        top: 60%;
+        left: 9%;
+        margin-right: 4%;
+        text-align: center;
+        font-family: "Jura";
+        background-color: #D2BE98;
+        padding: 1%;
+        border-radius: 50px;
+        cursor: pointer;
+    }
+    #clickhere:hover{
+        background-color: #ac9b7c;
+    }
+    #wcag{
+        position: absolute;
+        top: 105%;
+        font-family: "Jura";
+        font-size: 20px;
+        text-align: center;
+        left: 10%;
+    }
+    #view{
+        display: none;
+    }
+    #wcagrec{
+        background-color: #98D2B6;
+        width: 85%;
+        height: 23%;
+        position: absolute;
+        top: 100%;
+        left: 7.5%;
+        border-radius: 40px;
+    }
+    #semanticrec{
+        background-color: #D29898;
+        width: 85%;
+        height: 23%;
+        position: absolute;
+        top: 129%;
+        left: 7.5%;
+        border-radius: 40px;
+    }
+    #semantic{
+        position: absolute;
+        top: 135%;
+        font-size: 25px;
+        font-family: "Jura";
+        left: 20%;
+        text-align: center;
+    }
+    #viewsemantic{
+        display: none;
+    }
+    #accessrec{
+        background-color: #98BDD2;
+        width: 85%;
+        height: 23%;
+        position: absolute;
+        top: 157%;
+        left: 7.5%;
+        border-radius: 40px;
+    }
+    #access{
+        font-size: 30px;
+        font-family: "Jura";
+        position: absolute;
+        top: 162%;
+        left: 20%;
+    }
+    #viewaccess{
+        display: none;
+    }
+    #bottom{
+        position: absolute;
+        top: 185%;
+        font-family: "Jura";
+        font-size: 18px;
+        left: 20%;
+    }
+    #bottomrec{
+        background-color: #D2BE98;
+        width: 100%;
+        height: 5%;
+        position: absolute;
+        top: 184%;
+        left: 0%;
+    }
+}
+@media only screen and (min-width: 401px) and (max-width: 640px){
+    img{
+        width: 20px;
+        height: 20px;
+        position: absolute;
+        left: 17%;
+        top: 12%;
+    }
+    .button-home{
+        position: absolute;
+        height: 30px;
+        width: 30px;
+        left: 5%;
+        cursor: pointer;
+    }
+    .search-home{
+        display: none;
+    }
+    a{
+        color: black;
+        text-decoration: none;
+    }
+    #webtitle{
+        font-size: 25px;
+        font-family: "Jura";
+        position: absolute;
+        left: 30%;
+    }
+    #sub_title{
+        font-size: 40px;
+        font-family: "Jura";
+        position: absolute;
+        top: 15%;
+        left: 5%;
+        text-align: center;
+        font-weight: lighter;
+    }
+    #describe{
+        font-size: 25px;
+        position: absolute;
+        top: 39%;
+        left: 10%;
+        text-align: center;
+        font-family: "Jura";
+    }
+    #clickhere{
+        font-size: 25px;
+        position: absolute;
+        top: 60%;
+        left: 25%;
+        margin-right: 4%;
+        text-align: center;
+        font-family: "Jura";
+        background-color: #D2BE98;
+        padding: 1%;
+        border-radius: 50px;
+        cursor: pointer;
+    }
+    #clickhere:hover{
+        background-color: #ac9b7c;
+    }
+    #wcag{
+        position: absolute;
+        top: 100%;
+        font-family: "Jura";
+        font-size: 30px;
+        text-align: center;
+        margin-right: 2%;
+    }
+    #view{
+        display: none;
+    }
+    #wcagrec{
+        background-color: #98D2B6;
+        width: 85%;
+        height: 23%;
+        position: absolute;
+        top: 100%;
+        left: 7.5%;
+        border-radius: 40px;
+    }
+    #semanticrec{
+        background-color: #D29898;
+        width: 85%;
+        height: 23%;
+        position: absolute;
+        top: 129%;
+        left: 7.5%;
+        border-radius: 40px;
+    }
+    #semantic{
+        position: absolute;
+        top: 132.5%;
+        font-size: 35px;
+        font-family: "Jura";
+        left: 11.7%;
+        text-align: center;
+    }
+    #viewsemantic{
+        display: none;
+    }
+    #accessrec{
+        background-color: #98BDD2;
+        width: 85%;
+        height: 23%;
+        position: absolute;
+        top: 157%;
+        left: 7.5%;
+        border-radius: 40px;
+    }
+    #access{
+        font-size: 35px;
+        font-family: "Jura";
+        position: absolute;
+        top: 161%;
+        left: 17.5%;
+    }
+    #viewaccess{
+        display: none;
+    }
+    #bottom{
+        position: absolute;
+        top: 185%;
+        font-family: "Jura";
+        font-size: 18px;
+        left: 23%;
+    }
+    #bottomrec{
+        background-color: #D2BE98;
+        width: 100%;
+        height: 5%;
+        position: absolute;
+        top: 184%;
+        left: 0%;
+    }
 }
 @media only screen and (min-width: 641px) and (max-width: 1007px){
+    img{
+        width: 40px;
+        height: 40px;
+        position: absolute;
+        left: 15%;
+        top: 15%;
+    }
+    .button-home{
+        position: absolute;
+        height: 60px;
+        width: 60px;
+        left: 5%;
+        top: 3%;
+        cursor: pointer;
+    }
+    .search-home{
+        display: none;
+    }
+    a{
+        color: black;
+        text-decoration: none;
+    }
     #webtitle{
         font-size: 40px;
         font-family: "Jura";
         position: absolute;
-        left: 32%;
+        margin-left: 28%;
+        top: 3%;
     }
     #sub_title{
-        font-size: 80px;
+        font-size: 60px;
         font-family: "Jura";
         position: absolute;
         top: 15%;
+        left: 1%;
         text-align: center;
         font-weight: lighter;
+    }
+    #describe{
+        font-size: 30px;
+        position: absolute;
+        top: 55%;
+        left: 8%;
+        text-align: center;
+        font-family: "Jura";
+    }
+    #clickhere{
+        font-size: 35px;
+        position: absolute;
+        top: 70%;
+        left: 17%;
+        margin-right: 4%;
+        text-align: center;
+        font-family: "Jura";
+        background-color: #D2BE98;
+        padding: 1%;
+        border-radius: 50px;
+        cursor: pointer;
+    }
+    #clickhere:hover{
+        background-color: #ac9b7c;
+    }
+    #wcag{
+        position: absolute;
+        top: 102.5%;
+        font-family: "Jura";
+        font-size: 30px;
+        text-align: center;
+        left: 18%;
+    }
+    #view{
+        display: none;
+    }
+    #wcagrec{
+        background-color: #98D2B6;
+        width: 85%;
+        height: 23%;
+        position: absolute;
+        top: 100%;
+        left: 7.5%;
+        border-radius: 40px;
+    }
+    #semanticrec{
+        background-color: #D29898;
+        width: 85%;
+        height: 23%;
+        position: absolute;
+        top: 129%;
+        left: 7.5%;
+        border-radius: 40px;
+    }
+    #semantic{
+        position: absolute;
+        top: 132.5%;
+        font-size: 35px;
+        font-family: "Jura";
+        left: 27.7%;
+        text-align: center;
+    }
+    #viewsemantic{
+        display: none;
+    }
+    #accessrec{
+        background-color: #98BDD2;
+        width: 85%;
+        height: 23%;
+        position: absolute;
+        top: 157%;
+        left: 7.5%;
+        border-radius: 40px;
+    }
+    #access{
+        font-size: 35px;
+        font-family: "Jura";
+        position: absolute;
+        top: 161%;
+        left: 30.5%;
+    }
+    #viewaccess{
+        display: none;
+    }
+    #bottom{
+        position: absolute;
+        top: 185%;
+        font-family: "Jura";
+        font-size: 18px;
+        left: 35%;
+    }
+    #bottomrec{
+        background-color: #D2BE98;
+        width: 100%;
+        height: 5%;
+        position: absolute;
+        top: 184%;
+        left: 0%;
     }
 }
 @media only screen and (min-width: 1008px) and (max-width: 1300px){
@@ -236,6 +614,7 @@ body{
     }
     a{
         color: black;
+        text-decoration: none;
     }
     #wcag-title{
         font-family: "Jura";
@@ -479,6 +858,7 @@ body{
     }
     a{
         color: black;
+        text-decoration: none;
     }
     #wcag-title{
         font-family: "Jura";
