--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -7,6 +7,23 @@
 body{
     background-color: white;
 }
+footer{
+    text-align: center;
+    font-family: "Jura";
+    font-size: 20px;
+    background-color: #D2BE98;
+    padding: 0.7% 1.5%;
+}
+
+.code-snippet{
+    background-color: #D2BE98;
+    width: 80%;
+    text-align: left;
+}
+
+.content-text{
+    margin-left: 200px;
+}
 
 @media only screen and (min-width: 200px) and (max-width: 640px){
     #webtitle{
