--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -11,18 +11,33 @@ footer{
     font-family: "Jura";
     font-size: 20px;
     background-color: #D2BE98;
+    margin-top: 100px;
     padding: 0.7% 1.5%;
 }
 
 .code-snippet{
     background-color: #D2BE98;
-    width: 80%;
+    font-family: "Jura";
+    width: 100%;
     text-align: left;
 }
 
-.content-text{
-    margin-left: 200px;
+.code-image{
+    display: none;
 }
+
+.content-text{
+    margin-left: 250px;
+    position: absolute;
+    margin-top: 3%;
+    padding: 20px;
+    font-family: "Jura";
+}
+
+#semantic-title{
+    font-size: 40px;
+}
+
 
 @media only screen and (min-width: 200px) and (max-width: 400px){
     img{
