--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -40,25 +40,6 @@ body{
 
 
 @media only screen and (min-width: 200px) and (max-width: 400px){
-    img{
-        display: none;
-        /*width: 20px;
-        height: 20px;
-        position: absolute;
-        left: 17%;
-        top: 12%;*/
-    }
-    .button-home{
-        /*position: absolute;
-        height: 30px;
-        width: 30px;
-        left: 5%;
-        cursor: pointer;*/
-        display: none;
-    }
-    .search-home{
-        display: none;
-    }
     a{
         color: black;
         text-decoration: none;
@@ -217,23 +198,6 @@ body{
     }
 }
 @media only screen and (min-width: 401px) and (max-width: 640px){
-    img{
-        width: 20px;
-        height: 20px;
-        position: absolute;
-        left: 17%;
-        top: 12%;
-    }
-    .button-home{
-        position: absolute;
-        height: 30px;
-        width: 30px;
-        left: 5%;
-        cursor: pointer;
-    }
-    .search-home{
-        display: none;
-    }
     a{
         color: black;
         text-decoration: none;
@@ -353,24 +317,6 @@ body{
     }
 }
 @media only screen and (min-width: 641px) and (max-width: 1007px){
-    img{
-        width: 40px;
-        height: 40px;
-        position: absolute;
-        left: 15%;
-        top: 15%;
-    }
-    .button-home{
-        position: absolute;
-        height: 60px;
-        width: 60px;
-        left: 5%;
-        top: 3%;
-        cursor: pointer;
-    }
-    .search-home{
-        display: none;
-    }
     a{
         color: black;
         text-decoration: none;
@@ -508,56 +454,6 @@ body{
     }
 }
 @media only screen and (min-width: 1301px) and (max-width: 1900px){
-    .search-container-home {
-        display: none;
-        /*border: none;
-        position: absolute;
-        left: 1%;
-        top: 3%;*/
-    }
-    .search-home{
-        display: none;
-        /*font-size: 25px;
-        font-family: "Jura";*/
-    }
-    .search{
-        display: none;
-        /*font-size: 20px;
-        font-family: "Jura";
-        width: 70%;*/
-    }
-    img{
-        display: none;
-        /*width: 35%;
-        height: 60%;
-        position: absolute;
-        left: 30%;
-        top: 20%;*/
-    }
-    .button{
-        display: none;
-        /*position: absolute;
-        height: 100%;
-        width: 20%;
-        left: 75%;
-        cursor: pointer;*/
-    }
-    .button-home{
-        display: none;
-        /*position: absolute;
-        height: 100%;
-        width: 20%;
-        left: 102%;
-        cursor: pointer;*/
-    }
-    .search-container{
-        display: none;
-        /*order: none;
-        position: absolute;
-        left: 5%;
-        font-size: 17px;*/
-    }
-    
     #webtitle{
         font-size: 50px;
         font-family: "Jura";
@@ -838,71 +734,15 @@ body{
         top: 178%;
         left: 0%;
     }
-    #level-a{
+    #levels{
         font-family: "Jura";
         position: absolute;
         top: 230%;
         left: 22%;
         margin-right: 2%;
     }
-    #level-aa{
-        font-family: "Jura";
-        position: absolute;
-        top: 237%;
-        left: 22%;
-        margin-right: 2%;
-    }
-    #level-aaa{
-        font-family: "Jura";
-        position: absolute;
-        top: 244%;
-        left: 22%;
-        margin-right: 2%;
-    }
 }
 @media only screen and (min-width: 1901px){
-    .search-container-home {
-        border: none;
-        position: absolute;
-        left: 1%;
-        top: 2%;
-    }
-    .search-home{
-        font-size: 30px;
-        font-family: "Jura";
-    }
-    .search{
-        font-size: 20px;
-        font-family: "Jura";
-        width: 70%;
-    }
-    img{
-        width: 35%;
-        height: 60%;
-        position: absolute;
-        left: 30%;
-        top: 20%;
-    }
-    .button{
-        position: absolute;
-        height: 100%;
-        width: 20%;
-        left: 75%;
-        cursor: pointer;
-    }
-    .button-home{
-        position: absolute;
-        height: 100%;
-        width: 20%;
-        left: 102%;
-        cursor: pointer;
-    }
-    .search-container{
-        border: none;
-        position: absolute;
-        left: 5%;
-        font-size: 17px;
-    }
     #webtitle{
         font-size: 65px;
         font-family: "Jura";
@@ -1036,18 +876,32 @@ body{
         top: 214%;
         left: 0%;
     }
+    #bottom-wcag{
+        position: absolute;
+        top: 220.5%;
+        font-family: "Jura";
+        font-size: 40px;
+        left: 40%;
+    }
+    #bottomrec-wcag{
+        background-color: #D2BE98;
+        width: 100%;
+        height: 5.5%;
+        position: absolute;
+        top: 220%;
+        left: 0%;
+    }
     a{
         color: black;
         text-decoration: none;
     }
     #wcag-title{
         font-family: "Jura";
-        font-size: 70px;
+        font-size: 55px;
         position: absolute;
-        top: 15%;
-        left: 22%;
+        top: 10.5%;
+        left: 15.3%;
     }
-
     .sidenav {
         height: 100%; /* 100% Full-height */
         width: 250px; /* 0 width - change this with JavaScript */
@@ -1061,8 +915,7 @@ body{
         transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
     }
     .sidenav a {
-        padding: 80px 8px 8px 32px;
-        margin-top: 50%;
+        padding: 100px 8px 8px 32px;
         text-decoration: none;
         font-size: 25px;
         font-family: "Jura";
@@ -1080,30 +933,120 @@ body{
     #main {
         padding: 20px;
     }
+    #pour-title{
+        padding: 300px;
+        font-family: "Jura";
+        font-size: 40px;
+        position: absolute;
+        bottom: 46%;
+        text-decoration: underline;
+        left: 0%;
+        font-weight: light;
+    }
     #pour{
         padding: 300px;
         font-family: "Jura";
-        font-size: 50px;
+        font-size: 30px;
         position: absolute;
-        left: 3%;
+        bottom: 42%;
+        left: 0%;
     }
     #perceive{
         padding-left: 300px;
         font-family: "Jura";
-        font-size: 40px;
+        font-size: 24px;
         position: absolute;
-        top: 45%;
-        left: 3%;
+        top: 33%;
+        left: 0%;
+        margin-right: 2%;
     }
     #perceive-ex{
         font-family: "Jura";
-        font-size: 35px;
         position: absolute;
-        top: 57%;
-        left: 22%;
-        padding-right: 6%;
+        top: 41%;
+        left: 18%;
+        font-size: 22px;
+        margin-right: 2%;
     }
     mark{
         background-color: #e3d5ba;
+    }
+    #operable{
+        padding-left: 300px;
+        font-family: "Jura";
+        font-size: 24px;
+        position: absolute;
+        top: 69%;
+        left: 0%;
+        margin-right: 2%;
+    }
+    #operable-ex{
+        font-family: "Jura";
+        position: absolute;
+        top: 80%;
+        left: 18%;
+        font-size: 22px;
+        margin-right: 2%;
+    }
+    #understandable{
+        padding-left: 300px;
+        font-family: "Jura";
+        font-size: 24px;
+        position: absolute;
+        top: 110%;
+        left: 0%;
+        margin-right: 2%;
+    }
+    #understandable-ex{
+        font-family: "Jura";
+        position: absolute;
+        top: 119%;
+        left: 18%;
+        font-size: 22px;
+        margin-right: 2%;
+    }
+    #robust{
+        padding-left: 300px;
+        font-family: "Jura";
+        font-size: 24px;
+        position: absolute;
+        top: 148%;
+        left: 0%;
+        margin-right: 2%;
+    }
+    #robust-ex{
+        font-family: "Jura";
+        position: absolute;
+        top: 157%;
+        left: 18%;
+        font-size: 22px;
+        margin-right: 2%;
+    }
+
+    #compliance-title{
+        padding: 300px;
+        font-family: "Jura";
+        font-size: 40px;
+        position: absolute;
+        top: 152%;
+        text-decoration: underline;
+        left: 0%;
+        font-weight: light;
+    }
+    #compliance{
+        padding: 300px;
+        font-family: "Jura";
+        font-size: 30px;
+        position: absolute;
+        top: 159%;
+        left: 0%;
+    }
+    #levels{
+        font-family: "Jura";
+        position: absolute;
+        top: 193%;
+        left: 18%;
+        font-size: 22px;
+        margin-right: 2%;
     }
 }
