animation and smooth scrolling added to homepage button

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -537,9 +537,16 @@ footer{
         left: 30%;
         font-family: "Jura";
         background-color: #D2BE98;
+        transition: all 0.5s;
+        box-shadow: 0 5px #746955;
         padding: 1%;
         border-radius: 50px;
         cursor: pointer;
+    }
+    #clickhere:active{
+        background-color: #ac9b7c;
+        box-shadow: 0 2px #666;
+        transform: translateY(4px);
     }
     #clickhere:hover{
         background-color: #ac9b7c;
