--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -129,9 +129,16 @@ footer{
         text-align: center;
         font-family: "Jura";
         background-color: #D2BE98;
+        transition: all 0.5s;
+        box-shadow: 0 4px #746955;
         padding: 1%;
         border-radius: 50px;
         cursor: pointer;
+    }
+    #clickhere:active{
+        background-color: #ac9b7c;
+        box-shadow: 0 1px #666;
+        transform: translateY(4px);
     }
     #clickhere:hover{
         background-color: #ac9b7c;
@@ -197,19 +204,21 @@ footer{
     }
     #bottom{
         position: absolute;
-        top: 184.5%;
-        height: 2%;
+        top: 172%;
         font-family: "Jura";
-        font-size: 18px;
-        left: 25%;
+        font-size: 15px;
+        left: 3%;
+        width: 91%;
+        padding: 1% 1.5%;
     }
-    #bottomrec{
-        background-color: #D2BE98;
-        width: 100%;
-        height: 5%;
+    #bottom-wcag{
         position: absolute;
-        top: 184%;
-        left: 0%;
+        top: 310%;
+        font-family: "Jura";
+        font-size: 15px;
+        left: 3%;
+        width: 91%;
+        padding: 1% 1.5%;
     }
 
     .topnav 
@@ -243,11 +252,131 @@ footer{
         width: 15px;
         cursor: pointer;
     }
-    #myLinks a:hover 
+    .sidenav{
+        display: none;
+    }
+    /*#myLinks a:hover 
     {
         background-color: #ac9b7c;
         color: white;
         cursor: pointer;
+    }*/
+    #wcag-title{
+        font-family: "Jura";
+        font-size: 20px;
+        position: absolute;
+        top: 10.5%;
+        left: 5%;
+    }
+    #pour-title{
+        font-family: "Jura";
+        font-size: 17px;
+        position: absolute;
+        left: 5%;
+        top: 20%;
+        text-decoration: underline;
+        font-weight: light;
+    }
+    #pour{
+        font-family: "Jura";
+        font-size: 17px;
+        position: absolute;
+        top: 24%;
+        left: 5%;
+        margin-right: 5%;
+    }
+    #perceive{
+        font-family: "Jura";
+        font-size: 15px;
+        position: absolute;
+        top: 32%;
+        left: 5%;
+        margin-right: 5%;
+    }
+    #perceive-ex{
+        font-family: "Jura";
+        position: absolute;
+        top: 45%;
+        left: 5%;
+        font-size: 12px;
+        margin-right: 5%;
+    }
+    mark{
+        background-color: #e3d5ba;
+    }
+    #operable{
+        font-family: "Jura";
+        font-size: 15px;
+        position: absolute;
+        top: 90%;
+        left: 5%;
+        margin-right: 5%;
+    }
+    #operable-ex{
+        font-family: "Jura";
+        position: absolute;
+        top: 114%;
+        left: 5%;
+        font-size: 12px;
+        margin-right: 5%;
+    }
+    #understandable{
+        font-family: "Jura";
+        font-size: 15px;
+        position: absolute;
+        top: 158%;
+        left: 5%;
+        margin-right: 5%;
+    }
+    #understandable-ex{
+        font-family: "Jura";
+        position: absolute;
+        top: 176.5%;
+        left: 5%;
+        font-size: 12px;
+        margin-right: 5%;
+    }
+    #robust{
+        font-family: "Jura";
+        font-size: 15px;
+        position: absolute;
+        top: 216%;
+        left: 5%;
+        margin-right: 5%;
+    }
+    #robust-ex{
+        font-family: "Jura";
+        position: absolute;
+        top: 234%;
+        left: 5%;
+        font-size: 12px;
+        margin-right: 5%;
+    }
+
+    #compliance-title{
+        font-family: "Jura";
+        font-size: 17px;
+        position: absolute;
+        top: 257%;
+        text-decoration: underline;
+        left: 5%;
+        font-weight: light;
+    }
+    #compliance{
+        font-family: "Jura";
+        font-size: 15px;
+        position: absolute;
+        top: 262%;
+        left: 5%;
+        margin-right: 5%;
+    }
+    #levels{
+        font-family: "Jura";
+        position: absolute;
+        top: 275%;
+        left: 5%;
+        font-size: 12px;
+        margin-right: 5%;
     }
 }
 @media only screen and (min-width: 401px) and (max-width: 640px){
